gtkpod V0.52-CVS
	IMPROVEMENT: added auto-dection of Japanese encoding (thanks
	to Hiroshi Kawashima).

gtkpod V0.51
	NEW FEATURE: Synchronize directories (removed songs can be deleted
	automatically).

	NEW FEATURE: gtkpod remembers charset used when initially
	importing a song and uses this when "updating" the song
	information from file or writing tags to file (needs extended
	information enabled).

	NEW FEATURE: display free space on iPod.

	NEW FEATURE: menu item "Arrange Sort Tabs" to make all visible
	sort tabs the same size

        IMPROVEMENT: gtkpod should now compile "out of the box" under
	FreeBSD and NetBSD (some adaptations were necessary before).

        IMPROVEMENT: added all supported charsets provided by "iconv
	-l" to the list of charsets to choose from. Code assumes that
	"iconv -l" returns a list with the name of one charset in each
	line, each valid line being terminated by "//".

	IMPROVEMENT: new song column types: file size, play time,
	avg. bitrate

	BUGFIX: changed playlength code to that used by mp3info. It's much
	slower but seems to be more reliable.

	BUGFIX: fixed "dead" context menu "Alphabetize"

gtkpod V0.50
	NEW FEATURE: context sensitive popup menues (right mouse button
	click in playlist view, sort tabs or song view.

	NEW FEATURE: play song with xmms (two user definable commands).

	NEW FEATURE: option to mount the iPod directory on startup and
	unmount it on exit.

	NEW FEATURE: mount/unmount ipod directory on startup/exit, and/or
	execute ~/.gtkpod/gtkpod.in,out (or /etc/gtkpod/gtkpod.in,out if
	the former doesn't exist) on startup/exit. First gtkpod.in is
	executed, then the ipod is mounted (if this option is
	activated). On exit, it's the other way round.

	NEW FEATURE: read global prefs /etc/gtkpod/prefs if
	~/.gtkpod/prefs does not exist. Useful, e.g. to set a machine-wide
	default mountpoint for the ipod.

	IMPROVEMENT: "Add Songs" and "Add Directory" has a new default