@@ -434,3 +434,7 @@ on_cfg_sync_remove_confirm_toggled     (GtkToggleButton *togglebutton,
 void
 on_cfg_time_format_changed             (GtkEditable     *editable,
                                         gpointer         user_data);
+
+void
+on_cfg_case_sensitive_toggled          (GtkToggleButton *togglebutton,
+                                        gpointer         user_data);
